Add NEQ, fix tests, change gitignore